# CUA-extraction

./: .env.example  .gitattributes  .gitignore  CONTEXT.md  README.md  learnings.md  pyproject.toml
data/solidworks-tut/: selection.json
data/solidworks-tut/templates/: templates.jsonl  templates.jsonl.bak-20260718-172520  templates.jsonl.bak-before-one-box-per-frame  templates.jsonl.bak-before-temporal-thin  templates.jsonl.bak-before-xshift  templates.review.jsonl
docs/: opencua-action-reduction.md
frontend/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: KeystrokeDensityTimeline.tsx  LabelSearch.tsx  RefreshButton.tsx  VideoCanvas.tsx  VideoWorkbench.tsx
frontend/src/lib/: cursorConfig.ts  cursorFilter.ts  intentConfig.ts  paths.ts  python.ts  types.ts
scripts/: audit_yolo_data.py  clean_cursor_manifest.py  filter_cursor_events.py  normalize_final_events.py  predict_yolo_video.py  reduce_actions_opencua.py  render_final_video.py  split_mouse_events.py  train_yolo.py  train_yolo_compare.py  tune_yolo_m.py
src/cursor/: __init__.py
src/cursor/cli/: __init__.py  __main__.py  cli.py  cli_handlers.py
src/cursor/detector/: __init__.py  annotations.py  cursor_events.py  processor.py
src/cursor/intent/: __init__.py  audio_intent.py  intent.py  intent_jobs.py  speech_types.py
src/cursor/keypress/: __init__.py  analysis.py  cvdetect.py  keystrokes.py
src/cursor/reduce/: __init__.py  keymap.py  opencua.py  viewer.html  viewer.py
src/cursor/workflow/: __init__.py  models.py  (+2 more)
tests/: test_reduce_opencua.py
(+30 files in other folders)
