[project]
name = "cursor-predict"
version = "0.1.0"
description = "Extract cursor observations from screen-recorded tutorial videos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    "ultralytics>=8.4.96",
    "imageio-ffmpeg>=0.5",
    "requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor"]

[tool.hatch.build.targets.wheel.force-include]
"src/cursor/keypress/layouts" = "cursor/keypress/layouts"
